# web-programming

./: README.md  main.py  pyproject.toml
ch02/python-django/: README.md  pyproject.toml
ch02/python-django/src/todo/: settings.py  urls.py
ch02/python-django/src/todoapp/: models.py  serializers.py  views.py
ch02/python-fastapi/: api.py  model.py  todo.py
ch02/todos/: model.py  pyproject.toml
ch03/todos/: model.py
ch04/todos/: model.py  pyproject.toml  todo.py
ch05/planner/: pyproject.toml
ch05/planner/models/: events.py
ch05/planner/src/: main.py
ch05/planner/src/models/: events.py  users.py
ch05/planner/src/routes/: events.py  users.py
ch06/planner/: .env  pyproject.toml
ch06/planner/src/: main.py
ch06/planner/src/database/: connection.py
ch06/planner/src/models/: events.py  users.py
ch06/planner/src/routes/: events.py  users.py
ch06/rdbms/: main.py  pyproject.toml
ch06/rdbms/models/: events.py
ch06/rdbms/routes/: events.py
ch07/planner/: .env  main.py  pyproject.toml
ch07/planner/auth/: authenticate.py  jwt_handler.py
ch07/planner/database/: connection.py
ch07/planner/models/: events.py
ch07/planner/routes/: events.py
ch07/rdbms/: pyproject.toml  requirements.txt
ch07/rdbms/database/: connection.py
ch08/planner/auth/: authenticate.py
ch08/rdms/: main.py
ch08/rdms/tests/: conftest.py  test_routes.py
ch09/planner/: .env  docker-compose.yml  hello.py  main.py  pyproject.toml  requirements.txt
ch09/planner/auth/: jwt_handler.py
ch09/planner/database/: connection.py
ch09/planner/models/: events.py
ch09/planner/routes/: events.py  users.py
ch09/planner/templates/: planner_view.html
ch09/rdbms/: .env  docker-compose.yml  main.py
ch09/rdbms/auth/: jwt_handler.py
ch09/rdbms/database/: connection.py  sql_conn.py
ch09/rdbms/models/: events.py  users.py
ch09/rdbms/routes/: events.py  users.py
